Updated profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # twitter_username: cmDrStrange
 # github_username:  dric2018
 
-avatar: images/cmanouan_1.jpg
+avatar: images/mimi.jpg
 
 #
 # Flags below are optional
