--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3.0'
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - run: gem install bundler
       - run: bundle install
+
       - run: bundle exec jekyll build
 
       - name: Deploy to GitHub Pages
@@ -22,3 +32,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+
