--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -7,7 +7,7 @@
 # bluesky_url: # your bluesky URL
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: cmanouan@alumni.cmu.edu # your email address
+email: manouancedric@gmail.com # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: dric2018 # your GitHub user name
